media/css/appeal/spring24.css
/* ... */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url("/media/fonts/opensans-semibold.woff2") format("woff2"),
  url("/media/fonts/opensans-semibold.woff") format("woff");
}

@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 600;
  font-display: swap;
  src: url("/media/fonts/opensans-semibolditalic.woff2") format("woff2"),
  url("/media/fonts/opensans-semibolditalic.woff") format("woff");
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url("/media/fonts/opensans-bold.woff2") format("woff2"),
  url("/media/fonts/opensans-bold.woff") format("woff");
}

@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 700;
  font-display: swap;
  src: url("/media/fonts/opensans-bolditalic.woff2") format("woff2"),
  url("/media/fonts/opensans-bolditalic.woff") format("woff");
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 800;
  font-display: swap;
  src: url("/media/fonts/opensans-extrabold.woff2") format("woff2"),
  url("/media/fonts/opensans-extrabold.woff") format("woff");
}

@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 800;
  font-display: swap;
  src: url("/media/fonts/opensans-extrabolditalic.woff2") format("woff2"),
  url("/media/fonts/opensans-extrabolditalic.woff") format("woff");
}

/* Nicer fallbacks */
@font-face {
  font-family: 'system-ui';
  font-style: normal;
  font-weight: 300;
  src: local(".SFNS-Light"), local(".SFNSText-Light"), local("Segoe UI Light"), local("Ubuntu Light");
}

@font-face {
  font-family: 'system-ui';
  font-style: italic;
  font-weight: 300;
  src: local(".SFNS-LightItalic"), local(".SFNSText-LightItalic"), local("Segoe UI Light Italic"), local("Ubuntu Light Italic");
}

@font-face {
  font-family: 'system-ui';
  font-style: normal;
  font-weight: 400;
  src: local(".SFNS-Regular"), local(".SFNSText-Regular"), local("Segoe UI"), local("Ubuntu");
}

@font-face {
  font-family: 'system-ui';
  font-style: italic;
  font-weight: 400;
  src: local(".SFNS-Italic"), local(".SFNSText-Italic"), local("Segoe UI Italic"), local("Ubuntu Italic");
}

@font-face {
  font-family: 'system-ui';
  font-style: normal;
  font-weight: 500;
  src: local(".SFNS-Medium"), local(".SFNSText-Medium"), local("Segoe UI Semibold"), local("Ubuntu Medium");
}

@font-face {
  font-family: 'system-ui';
  font-style: italic;
  font-weight: 500;
  src: local(".SFNS-MediumItalic"), local(".SFNSText-MediumItalic"), local("Segoe UI Semibold Italic"), local("Ubuntu Medium Italic");
}

@font-face {
  font-family: 'system-ui';
  font-style: normal;
  font-weight: 700;
  src: local(".SFNS-Bold"), local(".SFNSText-Bold"), local("Segoe UI Bold"), local("Ubuntu Bold");
}

@font-face {
  font-family: 'system-ui';
  font-style: italic;
  font-weight: 700;
  src: local(".SFNS-BoldItalic"), local(".SFNSText-BoldItalic"), local("Segoe UI Bold Italic"), local("Ubuntu Bold Italic");
}

:root {
  --color-red-10: #FEE2E2;
  --color-red-30: #FCA5A5;
  --color-red-40: #f87171;
  --color-red-50: #ef4444;
  --color-red-60: #dc2626;
  --color-red-70: #b91c1c;
  --color-red-80: #991b1b;

  --color-blue-30: #88ccfc;
  --color-blue-40: #4cb1f9;
  --color-blue-50: #2493ef;
  --color-blue-60: #1373d9;
  --color-blue-90: #15427c;

  --color-teal-50: #0db7bd;

  --color-magenta-50: #e247c4;

  --color-gray-10: #f4f4f5;
  --color-gray-80: #27272a;

  --color-ink-10: #f1f3fa;
  --color-ink-70: #3e3c67;

  --color-white: #ffffff;

  --color-appeal-txt: #175491;
  --color-appeal-bg: #82C3F5;
  --color-appeal-main-bg: var(--color-white);
  --color-footer-txt: #105BBC;

  --bg2: var(--color-appeal-main-bg);
  --bg: var(--color-appeal-bg);
  --txt: var(--color-appeal-txt);
  --shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
  --accent-text: var(--color-appeal-txt);
  --closing-text: var(--color-footer-txt);
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-appeal-bg: #334B75;
    --color-appeal-txt: #F2F7FC;
    --color-appeal-main-bg: #2C343E;
    --color-footer-txt: #89BCFF;

    --shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
  }
}

.clouds-bg {
  --clouds-bg: url('/media/svg/appeal/spring24/clouds.svg');
  --clouds-size: 856px 820px;
  --clouds-position: right -2px top -50px;
  position: absolute;
  top: 0;
  display: flex;
  width: 100%;
  height: 1300px;
  justify-content: center;
  z-index: -1;
}

@media (prefers-color-scheme: dark) {
  .clouds-bg {
    --clouds-bg: url('/media/svg/appeal/spring24/clouds-dark.svg');
  }
}

.clouds-bg .left {
  background: var(--clouds-bg);
  background-repeat: no-repeat;
  background-position: var(--clouds-position);
  background-size: var(--clouds-size);
  width: 100%;
}

.clouds-bg .right {
  background: var(--clouds-bg);
  background-repeat: no-repeat;
  background-position: var(--clouds-position);
  background-size: var(--clouds-size);
  width: 100%;
  transform: scaleX(-100%);
}

html {
  font-family: Open Sans, system-ui, sans-serif;
  font-size: 1rem;
}

body {
  background-color: var(--bg);
  color: var(--txt);
  margin: 3rem 0 0;
  padding: 0;
  min-height: 100vh;
  max-width: 100%;
  line-height: 1.6;
}

.closing-text {
  text-align: center;
  color: var(--color-footer-txt);
}

section {
  background-color: var(--bg2);
}

#initAppeal {
  position: relative;
  left: -50px;

  display: flex;
  gap: 9px;
  margin: 0 auto 100px;
  padding: 0 24px 24px;

  max-width: 900px;
  align-items: center;
  font-size: 1.25rem;
}

#initAppeal h1 {
  font-size: 5rem;
  line-height: 1;
}

#initAppeal p:nth-of-type(2) > strong {
  /* Apply a new line for the bold text. This seems to play nice on the locales I've tested. */
  display: block;
}

#appeal-body {
  font-size: 1.31rem;
  font-weight: 400;
}

main {
  padding: 1em;
  margin: 0 auto;
  max-width: 800px;
  position: relative;
}


.accent-text {
  color: var(--accent-text);
}
/* ... */

